--- a/style.css
+++ b/style.css
@@ -366,14 +366,14 @@ p {
   font-size: 96px;
   font-size: 6rem;
   line-height: 0.8;
-  margin: 1px 10px 0 -10px;
+  margin: -4px 10px 0 -10px;
 }
 @media (min-width: 768px) {
   .cap:first-letter,
   .single .entry-content p:first-of-type:first-letter {
     font-size: 128px;
     font-size: 8rem;
-    margin-top: -9px;
+    margin-top: -16px;
   }
 }
 .cap:first-line,
